--- a/views/index.liquid
+++ b/views/index.liquid
@@ -21,24 +21,133 @@
 
 
 {% comment %} alle articles van 1971 {% endcomment %}
-{% for person in ninetySeventyOne %}
-  <article>
-  <li> <img src="{{ person.avatar }}" width="150px" href="/student/{{ person.id }}"></a></li>
-  <p> {{ person.name }} </p>
-  </article>
-{% endfor %}
+<section class="y1971">
+  {% for person in ninetySeventyOne %}
+    <article>
+    <li> <img src="{{ person.avatar }}" width="150px" href="/student/{{ person.id }}"></a></li>
+    <p> {{ person.name }} </p>
+    </article>
+  {% endfor %}
+</section>
+
+<section class="y1973">
+  {% for person in ninetySeventyThree %}
+    <article>
+    <li> <img src="{{ person.avatar }}" width="150px" href="/student/{{ person.id }}"></a></li>
+    <p> {{ person.name }} </p>
+    </article>
+  {% endfor %}
+</section>
+
+<section class="y1984">
+  {% for person in ninetyEightyFour %}
+    <article>
+    <li> <img src="{{ person.avatar }}" width="150px" href="/student/{{ person.id }}"></a></li>
+    <p> {{ person.name }} </p>
+    </article>
+  {% endfor %}
+</section>
+
+<section class="y1990">
+  {% for person in ninetyNinety %}
+    <article>
+    <li> <img src="{{ person.avatar }}" width="150px" href="/student/{{ person.id }}"></a></li>
+    <p> {{ person.name }} </p>
+    </article>
+  {% endfor %}
+</section>
+
+<section class="y1994">
+  {% for person in ninetyNinetyFour %}
+    <article>
+    <li> <img src="{{ person.avatar }}" width="150px" href="/student/{{ person.id }}"></a></li>
+    <p> {{ person.name }} </p>
+    </article>
+  {% endfor %}
+</section>
+
+<section class="y1999">
+  {% for person in ninetyNinetyNine %}
+    <article>
+    <li> <img src="{{ person.avatar }}" width="150px" href="/student/{{ person.id }}"></a></li>
+    <p> {{ person.name }} </p>
+    </article>
+  {% endfor %}
+</section>
+
+<section class="y2000">
+  {% for person in twoThousands %}
+    <article>
+    <li> <img src="{{ person.avatar }}" width="150px" href="/student/{{ person.id }}"></a></li>
+    <p> {{ person.name }} </p>
+    </article>
+  {% endfor %}
+</section>
+
+<section class="y2001">
+  {% for person in twoThousandOne %}
+    <article>
+    <li> <img src="{{ person.avatar }}" width="150px" href="/student/{{ person.id }}"></a></li>
+    <p> {{ person.name }} </p>
+    </article>
+  {% endfor %}
+</section>
+
+<section class="y2002">
+  {% for person in twoThousandTwo %}
+    <article>
+    <li> <img src="{{ person.avatar }}" width="150px" href="/student/{{ person.id }}"></a></li>
+    <p> {{ person.name }} </p>
+    </article>
+  {% endfor %}
+</section>
+
+<section class="y2003">
+  {% for person in twoThousandThree %}
+    <article>
+    <li> <img src="{{ person.avatar }}" width="150px" href="/student/{{ person.id }}"></a></li>
+    <p> {{ person.name }} </p>
+    </article>
+  {% endfor %}
+</section>
+
+<section class="y2004">
+  {% for person in twoThousandFour %}
+    <article>
+    <li> <img src="{{ person.avatar }}" width="150px" href="/student/{{ person.id }}"></a></li>
+    <p> {{ person.name }} </p>
+    </article>
+  {% endfor %}
+</section>
+
+<section class="y2005">
+  {% for person in twoThousandFive %}
+    <article>
+    <li> <img src="{{ person.avatar }}" width="150px" href="/student/{{ person.id }}"></a></li>
+    <p> {{ person.name }} </p>
+    </article>
+  {% endfor %}
+</section>
+
+<section class="y2006">
+  {% for person in twoThousandSix %}
+    <article>
+    <li> <img src="{{ person.avatar }}" width="150px" href="/student/{{ person.id }}"></a></li>
+    <p> {{ person.name }} </p>
+    </article>
+  {% endfor %}
+</section>
+
+<section class="y2007">
+  {% for person in twoThousandSeven %}
+    <article>
+    <li> <img src="{{ person.avatar }}" width="150px" href="/student/{{ person.id }}"></a></li>
+    <p> {{ person.name }} </p>
+    </article>
+  {% endfor %}
+</section>
 
 
-{% comment %} alle articles van 2005 {% endcomment %}
-
-{% for person in twoThousandFive %}
-  <article>
-  <li> <img src="{{ person.avatar }}" width="150px" href="/student/{{ person.id }}"></a></li>
-  <p> {{ person.name }} </p>
-  </article>
-{% endfor %}
-
-{% comment %} 1971 {% endcomment %}
 
 
 <div class="container">
