--- a/views/head.liquid
+++ b/views/head.liquid
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chill Squadpage</title>
+
+  <link rel="stylesheet" href="/public/styles/miel.css">
 </head>
 <body>
 <header>
