--- a/views/head.liquid
+++ b/views/head.liquid
@@ -7,6 +7,7 @@
 
   <link rel="stylesheet" href="/public/styles/styles.css">
   <link rel="stylesheet" href="/public/styles/miel.css">
+  <link rel="stylesheet" href="/public/styles/kyan.css">
 </head>
 <body>
 <header>
