--- a/views/head.liquid
+++ b/views/head.liquid
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chill Squadpage</title>
 
-  <link rel="stylesheet" href="/public/styles/styles.css">
-  <link rel="stylesheet" href="/public/styles/miel.css">
-  <link rel="stylesheet" href="/public/styles/kyan.css">
+  <link rel="stylesheet" href="/styles/styles.css">
+  <link rel="stylesheet" href="/styles/miel.css">
+  <link rel="stylesheet" href="/styles/kyan.css">
 </head>
 <body>
 <header>
