--- a/views/index.liquid
+++ b/views/index.liquid
@@ -208,7 +208,7 @@
 {% comment %} Kyan {% endcomment %}
   
   <section class="slidecontainer">
-    <input type="range" min="1970" max="2010" value="1970" class="slider" id="myRange">
+    <input class="slider" type="range" min="1970" max="2010" value="1970" class="slider" id="myRange">
   </section>
 
 {% render 'views/end.liquid', squads: squads %}
