--- a/views/head.liquid
+++ b/views/head.liquid
@@ -6,7 +6,7 @@
   <title>Chill Squadpage</title>
 
   <link rel="stylesheet" href="/public/styles/styles.css">
-  <link rel="stylesheet" href="/public/styles/miel.css">
+  <link rel="stylesheet" href="/styles/miel.css">
 </head>
 <body>
 <header>
