--- a/public/styles/miel.css
+++ b/public/styles/miel.css
@@ -15,6 +15,11 @@
     --font-size-xl-mobile:24px;
 }
 
+@font-face {
+    font-family: 'maniac';
+    src: url('/font/Maniac.ttf') format('truetype');
+}
+
 h1 {
     font-family: maniac;
 }
@@ -39,53 +44,106 @@ p {
     font-family: arial;
 }
 
-@font-face {
-    font-family: 'maniac';
-    src: url('/font/Maniac.ttf') format('truetype');
+.carrousel {
+    display:
 }
 
-* {
-    font-family: maniac;
-}
-
-.carrousel section {
+.carrousel div {
     display: flex;
     justify-content: center;
-    overflow-x: scroll;
     gap: 1em;
     height: 10em;
-    display: none;
+    background-color: var(--light-color);
 
     article {
         border-radius: 1em;
+        position: relative;
+        z-index: 1;
+
         p {
             display: none;
         }
 
-        :hover~ p {
+        :hover ~ .carrousel div {
+            background-color: black;
+        }
+
+        :hover ~ article {
+            opacity: 1;
+            z-index: 2;
+        }
+
+        :hover ~ p {
             display: block;
-            position: relative;
-            top: -5em;
-            left: 1em;
             background-color: var(--light-color);
             color: var(--dark-color);
-            padding: 1em;
+            padding: 0.4em;
             border-radius: 1em;
+            top: -10px;
+            border: var(--dark-color) solid 2px;
+            animation: scale 0.3s linear;
+            text-align: center;
         }
 
         img {
             object-fit: contain;
             border-radius: 1em;
+            height: 150px;
+            width: 150px;
+            opacity: 0.7;
+
+            @media (max-width:700px) {
+                height: 8em;
+                width: 8em;
+            }
         }
+        img:hover {
+            opacity: 1;
+        }
+
+        @media (max-width:700px) {
+            height: 8em;
+        }
+    }
+
+    article:hover {
+        animation: scale2 0.4s forwards;
+        
+    }
+
+
+}
+
+@keyframes scale {
+    0% {
+        scale: 0.5;
+        opacity: 0;
+    }
+
+    100% {
+        scale: 1;
+        opacity: 1;
+    }
+}
+
+@keyframes scale2 {
+    0% {
+        scale: 1;
+    }
+
+    100% {
+        scale: 1.3;
+        transform: rotate(5deg);
+        filter:brightness(1.2);
     }
 }
 
 .year {
     height: 4em;
-    background-color: var(--dark-color);
+    background-color: var(--light-color);
     color: var(--light-color);
 }
 
-.y1971 {
-    display: block;
+.y1971 + .y1971 article {
+    display: none;
 }
