--- a/views/head.liquid
+++ b/views/head.liquid
@@ -8,8 +8,9 @@
   <link rel="stylesheet" href="/styles/styles.css">
   <link rel="stylesheet" href="/styles/miel.css">
   <link rel="stylesheet" href="/styles/kyan.css">
+  <link rel="stylesheet" href="/styles/recep.css">
 </head>
 <body>
 <header>
-<h1>Squadpage</h1>
+<h1>FDND Jaar 1</h1>
 </header>
