--- a/views/index.liquid
+++ b/views/index.liquid
@@ -160,7 +160,7 @@
 
 <div class="year">
   {% comment %} hier komt de waarde die ook zichtbaar is op de slider {% endcomment %}
-    <h2>1970</h2>
+    <h2 class="yearof">1970</h2>
 </div>
 
 {% comment %} Kate {% endcomment %}
