--- a/views/head.liquid
+++ b/views/head.liquid
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="/styles/miel.css">
   <link rel="stylesheet" href="/styles/kyan.css">
   <link rel="stylesheet" href="/styles/recep.css">
+  <link rel="stylesheet" href="/styles/kate.css">
 </head>
 <body>
 <header>
