--- a/views/index.liquid
+++ b/views/index.liquid
@@ -198,8 +198,17 @@
 
 {% comment %} Kyan {% endcomment %}
   
-  <section class="slidecontainer">
-    <input class="slider" type="range" min="1970" max="2010" value="1970" class="slider" id="myRange">
+<section class="slidecontainer">
+  <section class="sliderinfo">
+      <input type="range" min="1970" max="2010" value="1970" class="slider" class="slider"
+      oninput="SliderYear()">
+
+      {% comment %} div Yearslider is bedoelt om het jaartal te laten zien zodra je slide, in CSS en JS. {% endcomment %}
+
+      <div class="yearslider"></div>
   </section>
+</section>
+
+<script src="slider.js"></script>
 
 {% render 'views/end.liquid', squads: squads %}
